--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "output-your-feelings",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
